// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render panel skew button desktop 1`] = `
<a
  class="vxteaser-skew-button first"
>
  Content
</a>
`;

exports[`render panel skew button tablet 1`] = `
<a
  class="vxteaser-skew-button first"
  style="top: -95.9409594095941px;"
>
  Content
</a>
`;
